Jann 30/objects/CRS_Dossier__c.object
<CustomObject>
    <description>Dossier object is in Master-detail relationship with CRS Object.</description>
    <fields>
        <fullName>CRSDossierToCRS__c</fullName>
        <label>CRS</label>
        <referenceTo>CRS__c</referenceTo>
        <relationshipLabel>CRS Dossiers</relationshipLabel>
        <relationshipName>CRS_Dossiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Section_10_1__c</fullName>
        <label>Section 10.1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Section_10_2__c</fullName>
        <label>Section 10.2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Section_11_0__c</fullName>
        <label>Section 11.1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>isSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSubmitted</label>
        <type>Checkbox</type>
    </fields>
    <label>CRS Dossier</label>
    <nameField>
        <displayFormat>CRSDossier-{0000}</displayFormat>
        <label>CRS Dossier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRS Dossiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>